--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			<h1>Hopefullion</h1>
 		</header>
 			<section id="content">
-				<canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
-				</canvas>
+				<center><canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
+				</canvas></center>
 		    </section>
 	    <footer>
 		    Footer
