--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	<body>
 		<header>
 			<h1>Hopefullion</h1>
+			<h2>By: Nicholas Gin</h2>
 		</header>
 			<section id="content">
 				<center><canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
 				</canvas></center>
 		    </section>
 	    <footer>
-		    Footer
+		    
 	    </footer>
 	</body>
 </html>
