--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<h1>Hopefullion</h1>
-			<h2>By: Nicholas Gin</h2>
+			<h2>By: Nicholas Gin, APCSA</h2>
 		</header>
 			<section id="content">
 				<center><canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
